--- a/locales/en.json
+++ b/locales/en.json
@@ -138,7 +138,7 @@
         "pageTitle": "Client name – {caseReference} – {serviceName} – GOV.UK",
         "validationError": {
           "notEmpty": "Enter the client name",
-          "notChanged": "Enter the client name, or select 'Cancel'"
+          "notChanged": "Change the client name, or select ‘Cancel’"
         }
       },
       "dateOfBirth": {
@@ -162,17 +162,18 @@
           },
           "validDate": "Enter a date in the correct format",
           "dateInPast": "The date of birth must be in the past",
-          "allEmpty": "The date of birth must include a day, month and year",
-          "notChanged": "Update the client date of birth or select 'Cancel'"
+          "mustInclude": "The date of birth must include a {field}",
+          "allEmpty": "Enter the client date of birth",
+          "notChanged": "Change the client date of birth, or select 'Cancel'"
         }
       },
       "email": {
         "label": "Email",
-        "title": "Client's email address (optional)",
-        "pageTitle": "Client's email address – {caseReference} – {serviceName} – GOV.UK",
+        "title": "Client email address (optional)",
+        "pageTitle": "Client email address – {caseReference} – {serviceName} – GOV.UK",
         "validationError": {
           "invalidFormat": "Enter an email address in the correct format, like name@example.com",
-          "notChanged" : "Enter the client email address, or select 'Cancel'"
+          "notChanged" : "Change the client email address, or select 'Cancel'"
         }
       },
       "phoneNumber": {
@@ -195,7 +196,7 @@
           "pageTitle": "Client address – {caseReference} – {serviceName} – GOV.UK",
           "postcode": "Postcode",
           "validationError":{
-            "notChanged": "Update the client address, or select 'Cancel'"
+            "notChanged": "Change the client address, or select 'Cancel'"
           }
         },
         "language": {
