--- a/locales/en.json
+++ b/locales/en.json
@@ -211,14 +211,16 @@
         "name": "Name",
         "address": "Address",
         "contactNumber": "Contact number",
-        "emailAddress": "Email address",
+        "emailAddress": "Email address (optional)",
         "relationshipToClient": "Relationship to Client",
         "passphrase": "Passphrase",
         "notSafeToCall": "The third party is not safe to call",
         "passphraseNotSetUp": "No, {reason}",
         "validationError": {
-          "notEmpty": "Enter the third party name",
-          "notChanged": "Change the client third party name, or select ‘Cancel’"
+          "notEmptyName": "Enter the third party name",
+          "notChangedName": "Change the client third party name, or select ‘Cancel’",
+          "invalidFormatEmail": "Enter an email address in the correct format, like name@example.com",
+          "notChangedEmail": "Change the client email address, or select 'Cancel'"
         }
       }
     },
